chore: 🤖 Added error handling to the Hootsuite api requests
Added error handling to the Hootsuite api requests.